--- a/experiment/simulation/expt2/mas_expt2.html
+++ b/experiment/simulation/expt2/mas_expt2.html
@@ -2,11 +2,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../../../libraries/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../libraries/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="mas_expt2.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <script src="../../../libraries/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-    <script src="../../../libraries/jQueryRotate.js"></script>
+    <script src="../libraries/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+    <script src="../libraries/jQueryRotate.js"></script>
     <script type="text/javascript" src="mas_expt2.js"></script>
     <title>Solvent Effects</title>
 </head>
