--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -7,7 +7,7 @@
 <body>
 		<!-- Your code goes here-->
 
-	<p>Click <a href="expt2/projects/mas_expt2.html" target="_blank">here</a> to perform the experiment          
+	<p>Click <a href="expt2/mas_expt2.html" target="_blank">here</a> to perform the experiment          
         </p>
 	<!-- Add JS at the bottom of HTML file --> 
         <script src="./js/main.js"></script>
